Seeding and Dropping Database both work now

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html html ng-app="MyApp">
+<html ng-app="MyApp">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -9,7 +9,7 @@
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body ng-controller="mainController as mctrl">
-
+    {{2+2}}
   </body>
 
   </body>
