--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
   </head>
   <body ng-controller="mainController as mctrl">
     {{2+2}}
+
+    <ul>
+      <li ng-repeat="event in mctrl.events track by $index">
+        {{event.title}} - {{$index}}
+        <button ng-click="mctrl.deleteEvent(event)">Delete this Event</button>
+      </li>
+    </ul>
+
+    <form ng-submit="mctrl.postEvent()">
+      Create new Event
+      <input type="text" ng-model="mctrl.title" placeholder="Title" />
+      <input type="submit" value="Create New Event">
+    </form>
   </body>
 
   </body>
