--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
   </head>
   <body ng-controller="mainController as mctrl">
 
-    <div class="nav" ng-include="'includes/loginreg.html'"></div> {{2+2}}
+    <div class="nav" ng-include="'includes/loginreg.html'"></div>
 
-    <ul>
+    <!-- <ul>
       <li ng-repeat="event in mctrl.events track by $index">
         <div ng-click="mctrl.handleClick()">{{event.title}} made by {{event.ownerEmail}}</div>
         <div ng-hide="mctrl.hideDiv">
@@ -89,7 +89,7 @@
       <input type="text" ng-model="mctrl.interestTags" placeholder="Interest Tags"/>
         <br/>
       <input type="submit" value="Create New Event">
-    </form>
+    </form> -->
 
   </body>
 </html>
