modified code regarding getevents and getusers

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body ng-controller="mainController as mctrl">
-    <button ng-click="mctrl.getEvents()">Refresh</button>
+    <button ng-click="mctrl.getEvents()">GET EVENTS</button>
     <div class="nav" ng-include="'includes/loginreg.html'"></div>
 
     <ul>
