basic layout of questions section

--- a/public/index.html
+++ b/public/index.html
@@ -91,5 +91,7 @@
       <input type="submit" value="Create New Event">
     </form>
 
+    <div class="nav" ng-include="'includes/questions.html'"></div>
+
   </body>
 </html>
