--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <header ng-include="'includes/nav.html'"></header>
 
       <!---Initial Profile Update upon registry--->
-      <div ng-include="'includes/initialProfile.html'"></div>
+      <div ng-include="'includes/initialProfile.html'">
 
       <!---Events Controller: Get events, add events, view events, etc.--->
       <div ng-include="'includes/events.html'"></div>
