login and register are noew in-line with the nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <section ng-controller="userController as uctrl">
 
       <!---Navigational bar--->
-      <header ng-include="'includes/nav.html'"></header>
+      <header ng-include="'includes/nav.html'" id="navvy"></header>
 
       <!---Initial Profile Update upon registry--->
       <div ng-include="'includes/initialProfile.html'"></div>
