Did footer, jumbotron + expansion, responsive navbar

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,11 @@
 
      </section>
 
-
+  <!---FOOTER--->
+  <div class="footer navbar-fixed-bottom">
+    <div>
+    Developed by Eric Chance & James Joo
+  </div>
 
   <!---SCRIPTS---->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
